# ROS2_uav

./: .gitignore  README.md
bridges/imu_bridge/: package.xml  setup.py
bridges/imu_bridge/config/: imu_bridge.yaml
bridges/imu_bridge/imu_bridge/: imu_bridge_node.py
bridges/imu_bridge/launch/: imu_bridge.launch.py
bridges/open_vins_patches/: ROS1Visualizer.h  estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  test_tracking.cpp
bridges/vio_to_px4/: package.xml  setup.cfg  setup.py
bridges/vio_to_px4/config/: vio_to_px4.yaml
bridges/vio_to_px4/launch/: vio_to_px4.launch.py
bridges/vio_to_px4/vio_to_px4/: vio_to_px4_node.py
docs/: 2026-03-29-openvins-单目联调复盘与待办.md  AGENT_workspace.md  git_backup_plan.md
openvins/: plan.md  source_ros_env.sh  subagent_openvins.md  want_px4.md
px4_offboard/: offboard_square.py  subagent_px4_offboard.md
scripts/: install_deps_jazzy.sh
